# V2.Myfavor-docker-backend

./: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  my_settings.py  pyproject.toml  readme.md  readme.txt  render.yaml  requirements.txt
albums/: admin.py  models.py  serializers.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_group_artists_alter_album_solo_artists.py  0002_initial.py  0003_initial.py
boards/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_alter_board_type.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_content.py
common/: models.py
config/: settings.py  urls.py  utils.py
groups/: admin.py  models.py  serializers.py  urls.py  views.py
groups/migrations/: 0001_initial.py  (+13 more)
hits/: urls.py  views.py
idols/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
likes/: models.py  serializers.py  urls.py  views.py
media/: models.py  serializers.py  urls.py  views.py
medias/: admin.py  models.py  urls.py  views.py
oauth/: models.py  serializers.py  urls.py  views.py
prizes/: admin.py  models.py
schedules/: admin.py  models.py  serializers.py  urls.py  views.py
search/: urls.py  views.py
solos/: admin.py  models.py  serializers.py  urls.py  views.py
static/: staticfiles.json
users/: admin.py  models.py  serializers.py  urls.py  views.py
usersCalendar/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+60 files in other folders)
