[tool.poetry]
name = "myfavor-final-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "~4.0"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
decouple = "*"

django-cors-headers = "^3.14.0"
psycopg2-binary = "^2.9.5"
user-manager = "^2.2"
requests = "^2.28.2"
Django = "~4.0"
dj-database-url = "^2.0.0"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
boto3 = "^1.26.153"
django-storages = "^1.13.2"
django-debug-toolbar = "^4.1.0"
Pillow = "^10.0.0"
django-seed = "^0.3.1"
redis = "^4.6.0"
django-redis = "^5.3.0"






[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
